 - Focus the inputbox when left-clicking in xtext.
 - Focus the inputbox when typing while the userlist is in focus.
 - Fixed bug where text typed could be sent to the wrong window after
   a detach.
 - New default icon again, this one scales better (Dagmar d'Surreal).
 - Send /LIST args on galaxynet.
 - Added settings to change inputbox and userlist styles to the same
   as the main text area.
 - 
 - 


----------------------------------------------------------------------
 1.9.8
----------------------------------------------------------------------

 - Added Amharic translation (Daniel Yacob).
 - Updated Spanish translation (Pablo del Campo).
 - Updated Lithuanian translation (Rimas Kudelis).
 - Updated Latvian translation (Artis Trops).
 - Fixed serverlist entry box text corruption (xc197-fixservlist.diff)
 - Fixed the non-mmx tinted-tranparency code crashing.
 - Fixed interpretation of mIRC color 99 [653094].
 - Use Pango renderer by default, for better i18n.
 - Scroll 1/10 of a page with the mouse wheel (Soeren Sandmann).
 - Reimplemented -a, --no-auto argument.
 - Fixed a bug in entering text with GTK2 IMs [653751].
 - Final fix for filenames' encoding in DCC.
 - New unicode character chart window.
 - xtext: properly recalculate text widths after a font change.
 - Fixed perl IRC::dcc_list 1.8.x incompatibility (Charles Lopes).
 - xtext: Implemented scrolling instead of full redraws when not using
   a background image or transparency. This improves scrolling on
   machines that draw AA text very slowly.
 - Reimplemented 'Move front tab left/right' keybinding.
 - Provide default usermenu and buttons for translation.
 - New default icon (Dagmar d'Surreal).
 - Report the average KBs when a transfer is finished.
 - Attempt to create dcc-download dir when changed in the setup gui.
 - Apply character set conversions to DCC Chat aswell (Steve Green).
 - xtext: Fixed hilight-text in scrollback after new addition bug.
 - Channellist gui cleanup.